# Annotator-BS2021

./: README.md
backend/: .env  .env.example  .gitignore  Cargo.toml
backend/migrations/2021-11-24-150453_create_users/: up.sql
backend/migrations/2021-11-26-135708_create_images/: up.sql
backend/migrations/2021-11-28-025700_create_tasks/: up.sql
backend/migrations/2021-11-28-031102_create_tags/: up.sql
backend/src/: main.rs  models.rs  schema.rs
backend/src/actions/: image.rs  mod.rs  task.rs  user.rs
backend/src/handlers/: image.rs  mod.rs  task.rs  user.rs  video.rs
backend/src/models/: image.rs  mod.rs  tag.rs  task.rs  user.rs
frontend/: README.md  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.js  routes.js
frontend/src/components/: FileListItem.js  FileUpload.js  FileUploadModal.js  ImageUploadModal.js  TaskCreateModal.js  VideoUploadModal.js
frontend/src/components/_dashboard/gallery/: FileListItem.js  FileUpload.js  ImageCard.js  ImageCartWidget.js  ImageList.js  ImageUploadModal.js  TaskCreateModal.js  VideoUploadModal.js  index.js
frontend/src/components/_dashboard/task/: TaskCard.js  TaskDescriptionModal.js  TaskExport.js  TaskModal.js  TaskPostsSearch.js  TaskPostsSort.js  index.js
frontend/src/layouts/dashboard/: AccountPopover.js  DashboardNavbar.js  DashboardSidebar.js  SidebarConfig.js
frontend/src/pages/: Blog.js  DashboardApp.js  Gallery.js  Login.js  Page404.js  Register.js  Task.js  TaskEdit.js  User.js
frontend/src/theme/overrides/: Backdrop.js
frontend/src/utils/: use-auth.js  utils.js
(+2 files in other folders)
