[package]
name = "annotator-backend"
version = "0.1.0"
authors = [
  "CHEN Yi <chenyi2000@zju.edu.cn>"
]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-identity = "0.3"
actix-multipart = "0.3"
actix-files = "0.5"
actix-cors = "0.5"
sanitize-filename = "0.2"
futures-util = "0.3"
diesel = { version = "1.4", features = ["mysql", "r2d2", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
log = "0.4"
env_logger = "0.9"
dotenv = "0.15"
rand = "0.8"
email_address = "0.2.0"
threadpool = "1.8"
imagesize = "0.5"
oss-rust-sdk = "0.2.1"
check-if-email-exists = "0.8"
